@@ -1,3 +1,9 @@
+2005-12-01  Christian Neumair  <chris@gnome-de.org>
+
+	* freedesktop.org.xml.in: Rename "text/xml" to "application/xml", make
+	the latter an alias. Improve SVG comments. Thanks to Eric van der
+	Vlist.
+
 2005-11-16  Christian Neumair  <chris@gnome-de.org>
 
 	* freedesktop.org.xml.in: Rename "application/x-troff" to
